--- a/src/index.css
+++ b/src/index.css
@@ -85,8 +85,10 @@ a {
   margin: 0;
   padding: 0;
   display: block;
-  color: var(--blanco);
   background-color: transparent;
+}
+.btn-cerrar-sesion{
+ color: var(--blanco);
 }
 
 @media (min-width: 768px) {
